tools/kube-state-metrics/kube-state-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: kube-system
  labels:
    app: kube-state-metrics
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
  - name: http-metrics
    port: 8080
  - name: tcp-telemetry
    port: 8081
  selector:
    app: kube-state-metrics
  type: LoadBalancer
