tools/kube-state-metrics/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-state-metrics
spec:
  hosts:
  - kube-state-metrics
  http:
  - route:
    - destination:
        host: kube-state-metrics
